--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,31 +3,10 @@
 @tailwind utilities;
 
 :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  --color-background-primary: rgba(194, 239, 212, 1);
+  --color-primary: rgba(34, 79, 52, 1);
+  --color-secondary: rgba(38, 125, 73, 1);
+  --color-text-base-primary:rgba(55, 55, 55, 1);
+  --color-text-base-secondary:rgba(69, 69, 69, 1);
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
